# TagSurvey

./: .gitignore  README.md  environment.yml  pyproject.toml  zero_shot_with_bart-large-mnli.ipynb
src/text_categorizer/: __init__.py  categorizer.py  cli.py  excel_converter.py  integration.py
